--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
   
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="/CSS/style.css">
 </head>
+
 <body>
 
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+  <div class="card box">
   
+  <img src='/images/illustration-hero.svg' alt='dancing illustration image'>
+
+  <h2>Order Summary</h2>
+
+  <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+  device anywhere you like!</p>
+
+  <div class='option box'>
+    <img src='/images/icon-music.svg'alt='musical note icon'>
+    <h4>Annual Plan</h4>
+    <p>$59.99/year</p>
+      <a href="#">Change</a>
+  </div>
+
+  <button class='cta box'><a href='#'>Proceed to Payment</a></button>
+  <a href='#'>Cancel Order</a>
+  </div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/andrewjuliodev">Andrew Julio</a>.
   </div>
 </body>
+
 </html>
