--- a/index.html
+++ b/index.html
@@ -13,30 +13,34 @@
 
 <body>
 
+<!-- Card Structure-->
   <div class="card box">
   
-  <img src='/images/illustration-hero.svg' alt='dancing illustration image'>
+    <img src='/images/illustration-hero.svg' alt='dancing illustration image'>
 
-  <h2>Order Summary</h2>
+    <h2>Order Summary</h2>
 
-  <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!</p>
+    <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+    device anywhere you like!</p>
 
-  <div class='option box'>
-    <img src='/images/icon-music.svg'alt='musical note icon'>
-    <h4>Annual Plan</h4>
-    <p>$59.99/year</p>
-      <a href="#">Change</a>
+    <div class='option box'>
+      <img src='/images/icon-music.svg'alt='musical note icon'>
+      <h4>Annual Plan</h4>
+      <p>$59.99/year</p>
+        <a href="#">Change</a>
+    </div>
+
+    <button class='cta box'><a href='#'>Proceed to Payment</a></button>
+    <a href='#'>Cancel Order</a>
+
   </div>
 
-  <button class='cta box'><a href='#'>Proceed to Payment</a></button>
-  <a href='#'>Cancel Order</a>
-  </div>
-
+<!-- Challenge Information-->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/andrewjuliodev">Andrew Julio</a>.
   </div>
+  
 </body>
 
 </html>
